Improve code coverage